[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "asp"
version = "0.1.0"
dependencies = ["stable-baselines3", "gymnasium[classic-control]", "rich", "tqdm"]

[tool.ruff]
# Same as Black.
line-length = 127
# Assume Python 3.8
target-version = "py38"
# See https://beta.ruff.rs/docs/rules/
select = ["E", "F", "B", "UP", "C90", "RUF"]
# B028: Ignore explicit stacklevel`
# RUF013: Too many false positives (implicit optional)
ignore = ["B028", "RUF013"]

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 15

[tool.black]
line-length = 127

[tool.isort]
profile = "black"
line_length = 127
src_paths = ["src/asp", "tests"]
